--- a/licenca.tex
+++ b/licenca.tex
@@ -12,9 +12,9 @@ Todos os códigos fontes na linguagem C utilizados neste texto, bem como o \text
 
 GitHub: \url{https://github.com/gradvohl/laboratorioSO}
 
-DOI: \url{https://doi.org/10.5281/zenodo.2620613}
+DOI: \url{https://doi.org/10.5281/zenodo.2620612}
 
 Para citar este texto, use as informações a seguir:
 
 \noindent
-{\sc Gradvohl, A. L. S.} Laboratório de Sistemas Operacionais (Versão 1.0). Zenodo. Disponível em \url{http://doi.org/10.5281/zenodo.2620613}, 2019.
+{\sc Gradvohl, A. L. S.} Laboratório de Sistemas Operacionais. Zenodo. Disponível em \url{http://doi.org/10.5281/zenodo.2620612}, 2019.
