--- a/licenca.tex
+++ b/licenca.tex
@@ -10,7 +10,7 @@ Essa licença permite que o usuário copie e redistribua o material em qualquer 
 
 Todos os códigos fontes na linguagem C utilizados neste texto, bem como o \textit{script} para a instalação dos códigos fontes, os arquivos compactados e o código fonte em \LaTeX{} deste texto estão disponíveis no site do GitHub e indexados no site do Zenodo conforme os endereços a seguir.
 
-GitHub: \url{https://github.com/gradvohl/laboratorioSO}
+\faGithub\ GitHub: \url{https://github.com/gradvohl/laboratorioSO}
 
 DOI: \url{https://doi.org/10.5281/zenodo.2620612}
 
