--- a/sinais.tex
+++ b/sinais.tex
@@ -1,6 +1,6 @@
 \chapter{Tratamento de Sinais}
 
-Sinais são usados para notificar um processo ou segmento de um evento particular. Pode-se comparar o tratamento de sinais com interrupções de hardware, que ocorrem quando um subsistema de hardware, por exemplo uma interface de E/S de disco, gera uma interrupção para o processador quando a E/S é concluída.
+Sinais são usados para notificar um processo ou segmento de um evento particular. Pode-se comparar o tratamento de sinais com interrupções de hardware, que ocorrem quando um subsistema de hardware, por exemplo uma interface de entrada ou saída (E/S) de disco, gera uma interrupção para o processador quando a E/S é concluída.
 
 Este evento, por sua vez, faz com que o processador chame um tratador de interrupções. Assim, o processamento subsequente pode ser feito no sistema operacional com base na fonte e da causa da interrupção.
 
