--- a/compartilhamentoMemoria.tex
+++ b/compartilhamentoMemoria.tex
@@ -22,7 +22,7 @@ Observe o que os programas a seguir fazem. O primeiro é o programa \texttt{shm\
 
 \section{Exercício}
 
-Compile ambos os programas e, em seguida, execute em uma janela o programa  \texttt{shm\_serv.o} e em outra janela o programa \texttt{shm\_cli.o}.
+Compile ambos os programas e, em seguida, execute em uma janela o programa  \texttt{shm\_serv} e em outra janela o programa \texttt{shm\_cli}.
 
 Antes de compilar o programa, mude para o diretório onde se encontram os arquivos \texttt{shm\_serv.c} e \texttt{shm\_cli.c} , com o seguinte comando:
 \begin{lstlisting}[style=MyBashStyle]
@@ -33,7 +33,6 @@ cd ../CompartMem
 Para compilar o programa utilize as linhas de comando a seguir:
 \begin{lstlisting}[style=MyBashStyle]
 gcc shm_serv.c -o shm_serv
-
 gcc shm_cli.c -o shm_cli
 \end{lstlisting}
 
