Updates from Overleaf

--- a/laboratorioSO.tex
+++ b/laboratorioSO.tex
@@ -79,7 +79,7 @@ Há ainda algumas dicas de teclas para os usuários iniciantes no \textit{bash} 
     \caption{Teclas úteis no \textit{bash}.}\label{tab:teclasBash}
 \begin{tabular}{@{}cl@{}}
 \toprule
-\textbf{Tecla}     & \textbf{Significado} \\ \midrule
+\textbf{Teclas}     & \textbf{Significado} \\ \midrule
 \keys{\arrowkeyup} & Repete o último comando.        \\
 \keys{\arrowkeydown} & Repete o próximo comando.        \\
 \keys{\ctrl + c} & Envia um sinal de término para o processo.\\
