Adição de changelog e  de mais informações sobre o comando kill.

--- a/progMultithread.tex
+++ b/progMultithread.tex
@@ -74,6 +74,8 @@ Note, logo no início da função que especifica o \textit{thread}, como os dado
 
 Perceba também que a variável de retorno (\texttt{soma}) é um ponteiro. Esse ponteiro terá a memória alocada dinamicamente na função para que possa ser devolvida no final do \textit{thread}. 
 
+\newpage
+
 \section*{mediaThread.c}
 \lstinputlisting[style=MyCStyle]{./Programas/Thread/mediaThreads.c}
 
