Atualização citation file e data

--- a/laboratorioSO.tex
+++ b/laboratorioSO.tex
@@ -38,7 +38,7 @@
 
 \title{Laboratório de Sistemas Operacionais}
 \author{Prof. André Leon S. Gradvohl, Dr.\\\href{mailto://exmaple@example.com}{gradvohl@ft.unicamp.br}}
-\date{4 de Abril de 2019}
+\date{17 de janeiro de 2022}
 
 \input{comandos.tex}
 
