Atualizações estéticas e de numeração.

--- a/comandos.tex
+++ b/comandos.tex
@@ -39,7 +39,8 @@
 \renewcommand*\thelstnumber{\lstprompt}
 \lstdefinestyle{MyBashStyle}{language=bash,
   basicstyle=\fontencoding{T1}\fontfamily{fvm}\selectfont,
-  xleftmargin=\parindent,
+  %xleftmargin=\parindent,
+  xleftmargin=2.7ex,
   morecomment=[s][\color{red}]{-}{\ }, 
   morecomment=[s][\color{red}]{--}{\ },
   morekeywords={uname,gcc,top,grep},%
