--- a/disparandoProcessos.tex
+++ b/disparandoProcessos.tex
@@ -75,6 +75,7 @@ onde:
  \end{itemize}
  
  O exemplo a seguir ilustra o programa que representa os processos pai e filho. 
+ \newpage
  
  \section*{\texttt{pai.c}}
  \lstinputlisting[style=MyCStyle]{./Programas/Processos/pai.c}
