--- a/infoProcessos.tex
+++ b/infoProcessos.tex
@@ -48,7 +48,7 @@ O comando \Comando{top} é um pouco mais poderoso, pois reporta mais informaçõ
 Utilize o comando \Comando{top} em sua máquina e tente identificar as informações providas pelo comando.
 
 \chapter{Obtendo informações sobre os processos}
-Neste capítulo, vamos verificar como obter informações sobre o próprio processo a partir dele mesmo.
+Neste capítulo, vamos verificar como obter informações sobre o próprio processo a partir dele mesmo. O processo consulta essas informações através de requisições ao sistema operacional.
 
 \section{Obtendo informações sobre o processo, via programa}
 É possível construir programas que interajam com o sistema operacional e obtenham algumas informações. Observe o código do programa a seguir:
