--- a/interacaoSO.tex
+++ b/interacaoSO.tex
@@ -1,4 +1,6 @@
 \chapter{Interação com o Sistema Operacional}
+Neste capítulo, veremos alguns comandos básicos para a interação com o sistema operacional Linux. 
+
 \section{Interagindo com o sistema operacional}
 O comando básico para obter informações sobre o sistema operacional é o
 %\begin{center}  \texttt{uname -a} \end{center}
