--- a/produtorConsumidor.tex
+++ b/produtorConsumidor.tex
@@ -17,7 +17,7 @@ Com base nessa explicação, observe o programa a seguir:
 Antes de compilar o programa, mude para o diretório onde se encontra o arquivo \texttt{principal.c} , com o seguinte comando:
 
 \begin{lstlisting}[style=MyBashStyle]
-cd ../ProdCons
+cd ../Semaforos
 \end{lstlisting}
 
 Compile o programa anterior com a seguinte linha de comando:
