--- a/laboratorioSO.tex
+++ b/laboratorioSO.tex
@@ -4,7 +4,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{libertine}
 \usepackage[scaled]{beramono}
-\usepackage{fontawesome}
+\usepackage{fontawesome5}
 \usepackage[portuges]{babel}
 \usepackage{hyperref}
 \usepackage{xspace}
