--- a/interacaoSO.tex
+++ b/interacaoSO.tex
@@ -9,8 +9,6 @@ O comando básico para obter informações sobre o sistema operacional é o
 uname -a
 \end{lstlisting}
 
-
-
 Observe a saída desse comando:
 \begin{lstlisting}[style=outputStyle]
 Linux grid1.cna.unicamp.br 2.4.20-8 #1 Thu Mar 13 17:18:24 EST 2003 i686 athlon i386 GNU/Linux
@@ -25,5 +23,33 @@ Entre as informações presentes na saída desse comando estão:
 \item plataforma de hardware.
 \end{itemize}
 
-\section{Exercício}
+\subsection{Exercício}
 Utilize o comando \ComandoParametros{uname}{-a} em sua máquina e tente identificar a saída do comando.
+
+\section{Obtendo informações sobre o hardware}
+Para obter informações sobre o hardware no qual o sistema operacional está funcionando, utilizaremos dois comandos. 
+
+\subsection{Informações sobre a unidade central de processamento}
+Para buscar informações sobre a unidade central de processamento (CPU), utilizaremos o comando  \Comando{lscpu}. Esse comando buscará informações armazenadas no arquivo \texttt{/proc/cpuinfo} e em outros locais específicos do sistema operacional.
+
+\subsection{Exercício}
+Utilize o comando \Comando{lscpu} em sua máquina e tente identificar quais as informações esse comando fornece.
+
+Depois, use o comando a seguir e verifique que informações esse comando fornece. Compare a saída do comando \Comando{lscpu} com a saída desse comando.
+
+\begin{lstlisting}[style=MyBashStyle]
+cat /proc/cpuinfo
+\end{lstlisting}
+
+
+\subsection{Informações sobre a memória}
+Para obter informações sobre a memória, podemos utilizar o comando \Comando{lsmem}. Esse comando trará, resumidamente, as informações sobre a memória. 
+
+Dentre essas informações que o comando \Comando{lsmem} provê estão a faixa de endereços de memória (\texttt{RANGE}), o tamanho de cada faixa (\texttt{SIZE}), o estado (\texttt{STATE}), se é um bloco removível, e os blocos correspondentes (\texttt{BLOCK}). Ao final, o comando indica o tamanho do bloco de memória e a quantidade total de memória \textit{online} e \textit{offline} (desativada).
+
+Para informações mais completas sobre a memória do computador que você está utilizando, abra o arquivo \texttt{/proc/meminfo}.
+
+\subsection{Exercício}
+Utilize o comando \Comando{lsmem} em sua máquina e tente identificar quais as informações esse comando fornece.
+
+Depois, use o comando \Comando{cat} \texttt{/proc/meminfo} e verifique que informações esse comando fornece. Compare a saída do comando \Comando{lsmem} com a saída desse comando.
